[package]
name = "cdtext"
description = "A rough implementation of CD-Text parser."
license = "MIT"
authors = ["NDRAEY"]
repository = "https://github.com/NDRAEY/cdtext"
version = "0.1.0"
edition = "2024"

[dependencies]
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
