[package]
name = "cdtext"
description = "A rough implementation of CD-Text parser."
license = "MIT"
authors = ["NDRAEY"]
repository = "https://github.com/NDRAEY/cdtext"
exclude = ["samples"]
version = "0.1.0"
edition = "2024"
categories = ["no-std"]
keywords = ["cd", "no_std"]

[dependencies]
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
